# VisualFun

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
Base/: Camera.cpp  Camera.h  ColorElement.cpp  ColorElement.h  Face.cpp  Face.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Structures.cpp  Structures.h  Vec3.cpp  Vec3.h
FileLoader/: STLLoader.cpp  STLLoader.h
Scene/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
Utils/: BasicGeometry.cpp  BasicGeometry.h
